feat: support vi

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -18,15 +18,15 @@
     "balance": "Balance"
   },
   "stats": {
-    "power": "Power:",
-    "capacity": "Capacity:",
-    "cycleCapacity": "Cycle Cap:",
-    "averageCellV": "Avg Cell V:",
-    "balanceCurrent": "Balance Cur:",
+    "power": "C. Suất:",
+    "capacity": "T1:",
+    "cycleCapacity": "T3:",
+    "averageCellV": "Áp TB",
+    "balanceCurrent": "Cân Bằng",
     "stateOfCharge": "SOC:",
-    "remainingAmps": "Remaining:",
-    "cycles": "Cycles:",
-    "delta": "Delta V:",
+    "remainingAmps": "T2",
+    "cycles": "T4",
+    "delta": "Lệch cell:",
     "mosfetTemp": "MOS Temp:"
   }
 }
