Add delta voltage unit selection, cell color gradient, and core-reactor enhancements

--- a/src/localize/languages/en.json
+++ b/src/localize/languages/en.json
@@ -11,6 +11,11 @@
     "cellColumns": "Number of columns",
     "cellLayout": "Cell Layout",
     "layout": "Layout",
+    "deltaVoltageUnit": "Delta Voltage Unit",
+    "cellColorMode": "Cell Color Mode",
+    "cellOrientation": "Cell Orientation",
+    "minCellVoltage": "Min Cell Voltage (V)",
+    "maxCellVoltage": "Max Cell Voltage (V)",
     "manualAssignment": "Manual entity assignment",
     "tempSensorsCount": "Number of temperature sensors available",
     "hasHeater": "Heater option is used"
@@ -30,7 +35,7 @@
     "stateOfCharge": "SOC:",
     "remainingAmps": "Remaining:",
     "cycles": "Cycles:",
-    "delta": "Delta V:",
+    "delta": "Delta Voltage:",
     "mosfetTemp": "MOS Temp:",
     "temperature_sensor_1": "Temp. 1:",
     "temperature_sensor_2": "Temp. 2:",
