--- a/src/localize/languages/uk.json
+++ b/src/localize/languages/uk.json
@@ -5,6 +5,7 @@
     "version": "Версія"
   },
   "config": {
+    "language": "Мова",
     "title": "Заголовок",
     "prefix": "Префікс сенсорів",
     "cellCount": "Кількість комірок",
